    `in-mode` (new, only show statusbar outside of normal mode.
  * The `QtFont` config type formerly used for `fonts.tabs` and
    `fonts.debug_console` is now removed and entirely replaced by `Font`. The
    former distinction was mainly an implementation detail, and the accepted
    values shouldn't have changed.
  * `input.rocker_gestures` has been renamed to `input.mouse.rocker_gestures`.
- Small performance improvements.

Added
~~~~~

- New settings:
  * `logging.level.ram` and `logging.level.console` to configure the default
    logging levels via the config.
  * `fonts.tabs.selected` and `fonts.tabs.unselected` to set the font of the
    selected tab independently from unselected tabs (e.g. to make it bold).
  * `input.mouse.back_forward_buttons` which can be set to `false` to disable
    back/forward mouse buttons.

Fixed
~~~~~

- Crash when `tabs.focus_stack_size` is set to -1.
- Crash when a `pdf.js` file for PDF.js exists, but `viewer.html` does not.
- Crash when `:completion-item-yank --sel` is used on a platform without
  primary selection support (e.g. Windows/macOS).
- Crash when there's a feature permission request from Qt with an invalid URL
  (which seems to happen with Qt 5.15 sometimes).
- Crash in rare cases where QtWebKit/QtWebEngine imports fail in unexpected
  ways.
- `:config-write-py` now works with paths starting with `~/...` again.
- New site-specific quirk for a missing `globalThis` in Qt <= 5.12 on Reddit
  and Spotify.
- When `;` is added to `hints.chars`, using hint labels containing `;;` now
  works properly.
- Hint letters outside of ASCII should now work.
- When `bindings.key_mappings` is used with hints, it now works properly with
  letters outside of ASCII as well.

v1.12.0 (2020-06-01)
--------------------

Removed
~~~~~~~

- `tox -e mkvenv` which was deprecated in qutebrowser v1.10.0 is now
  removed. Use the `mkvenv.py` script instead.
- Support for using `config.bind(key, None)` in `config.py` to unbind a