@@ -19,9 +19,16 @@
 
 """Keychain string displayed in the statusbar."""
 
+from PyQt5.QtCore import pyqtSlot
+
 from qutebrowser.mainwindow.statusbar import textbase
+from qutebrowser.utils import usertypes
 
 
 class KeyString(textbase.TextBase):
 
     """Keychain string displayed in the statusbar."""
+
+    @pyqtSlot(usertypes.KeyMode, str)
+    def on_keystring_updated(self, _mode, keystr):
+        self.setText(keystr)
